--- a/web/study.html
+++ b/web/study.html
@@ -6,7 +6,7 @@
     <title>Proffy | Sua plataforma de estudos online</title>
 
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/partials/header.css">
     <link rel="stylesheet" href="styles/partials/page-study.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins&display=swap"
