--- a/web/give-classes.html
+++ b/web/give-classes.html
@@ -7,16 +7,15 @@
 
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/partials/header.css">
+    <link rel="stylesheet" href="styles/partials/forms.css">
     <link rel="stylesheet" href="styles/partials/page-give-classes.css">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&
-      family=Poppins&display=swap"
-      rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins&display=swap"rel="stylesheet">
 </head>
-<body id="page-give-classe">
+<body id="page-give-classes">
 
      <div id="container">
-         
+
          <header class="page-header">
              <div class="top-bar-container">
                  <a href="/">
@@ -33,7 +32,56 @@
          </header>
 
          <main>
-            
+            <form action="" id="create-class">
+                <fieldset>
+                    <legend>Seus Dados</legend>
+
+                    <div class="input-block">
+                        <label for="name">Nome Completo</label>
+                        <input name="name" id="name" required>
+                    </div>
+                    <div class="input-block">
+                        <label for="avatar">Link da sua foto<small>(comece com https://)</small></label>
+                        <input name="avatar" id="avatar" type="url" required>
+
+                    </div>
+                    <div class="input-block">
+                        <label for="Whatsapp">Whatsapp<small>(somente números)</small></label>
+                        <input name="whatsapp" id="whatsapp" type="number" required>
+                    </div>
+                    <div class="textarea-block">
+                        <label for="bio">Biografia</label>
+                        <textarea name="bio" id="bio" required></textarea>
+                    </div>
+
+                </fieldset>
+
+                <fieldset>
+                    <legend>Sobre a aula</legend>
+                    <div class="select-block">
+                        <label for="subject">Matéria</label>
+                        <select name="subject" id="subject" required>
+                            <option value="">Selecione uma opção</option>
+                            <option value="1">Artes</option>
+                            <option value="2">Biologia</option>
+                            <option value="3">Ciências</option>
+                            <option value="4">Educação Física</option>
+                            <option value="5">Física</option>
+                            <option value="6">Geografia</option>
+                            <option value="7">História</option>
+                            <option value="8">Matemática</option>
+                            <option value="9">Português</option>
+                            <option value="10">Química</option>
+                        </select>
+                    </div>
+                    <div class="input-block">
+                        <label for="cost">Custo da sua hora/aula
+                            <small>(R$)</small>
+                        </label>
+                        <input type="cost" id="cost" type="number" required>
+                    </div>
+                </fieldset>
+            </form>
          </main>
      </div>
 </body>
