Adicionado o file addField.js,gera novos fields(para novos horários).

--- a/web/study.html
+++ b/web/study.html
@@ -18,7 +18,7 @@
      <div id="container">
          <header class="page-header">
              <div class="top-bar-container">
-                 <a href="/">
+                 <a href="/web/index.html">
                     <img src="images/icons/back.svg" alt="Voltar">
                 </a>
                 <img src="images/logo.svg" alt="Proffy">
