--- a/web/give-classes.html
+++ b/web/give-classes.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="styles/partials/page-give-classes.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins&display=swap"rel="stylesheet">
+
+    <script src="scripts/addField.js" defer></script>
 </head>
 <body id="page-give-classes">
 
@@ -18,7 +20,7 @@
 
          <header class="page-header">
              <div class="top-bar-container">
-                 <a href="/">
+                 <a href="/web/index.html">
                     <img src="images/icons/back.svg" alt="Voltar">
                 </a>
                 <img src="images/logo.svg" alt="Proffy">
@@ -84,38 +86,9 @@
 
                 <fieldset id="schedule-items">
                     <legend>Horários disponíveis
-                        <button id="add-time">+ Novo Horário</button>
+                        <button  type="button" id="add-time">+ Novo Horário</button>
                     </legend>
 
-                    <div class="schedule-items">
-
-                        <div class="select-block">
-                            <label for="weekday">Dia da semana</label>
-                            <select name="weekday[]" required>
-                                <option value="">Selecione uma Opção</option>
-                                <option value="0">Domingo</option>
-                                <option value="1">Segunda-feira</option>
-                                <option value="2">Terça-feira</option>
-                                <option value="3">Quarta-feira</option>
-                                <option value="4">Quinta-feira</option>
-                                <option value="5">Sexta-feira</option>
-                                <option value="6">Sábado</option>
-                            </select>
-                        </div>
-
-                        <div class="input-block">
-                            <label for="time_from">Das</label>
-                            <input type="time" name="time_from[]" required>
-                        </div>
-
-                        <div class="input-block">
-                            <label for="time_to">Até</label>
-                            <input type="time" name="time_to[]" required>
-                        </div>
-
-
-                    </div>
-                    
                     <div class="schedule-item">
 
                         <div class="select-block">
@@ -141,9 +114,8 @@
                             <label for="time_to">Até</label>
                             <input type="time" name="time_to[]" required>
                         </div>
-
-
                     </div>
+
                 </fieldset>
             </form>
 
